--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
-  text-align: center;
+.addFriendBtn{
+  border: 2px solid black;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.addFriendBtn:hover{
+  color: white;
+  background: darkgreen;
+  border: none;
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.addFriendBody{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input-container>input{
+  margin-top: 20px;
+  padding: 10px;
+  border: 2px solid blue;
+}
+.addTransactionsBtnDefault{
+  border: 1px solid grey;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+.addTransactionsBtn{
+  border: 2px solid black;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
+}
+.addTransactionsBtn:hover{
+  color: white;
+  background: darkgreen;
+  border: none;
+  cursor: pointer;
+}
+.transaction-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.friendName{
+  color: blue;
+}
+.transaction-description>input{
+  border: none;
+  outline: none;
+  padding: 10px;
+  border-bottom: 2px solid green;
+  width: 300px;
+}
+.transaction-amount>input{
+  border: none;
+  outline: none;
+  padding: 10px;
+  border-bottom: 2px solid rgb(210, 3, 172);
+  width: 300px;
+  margin-top: 40px;
+}
+.paidByYou{
+  border: 2px solid green;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+}
+.paidByYouSelected{
+  background-color: green;
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid green;
+}
+.paidByYou:hover{
+  background-color: green;
+  color: white;
+  cursor: pointer;
+}
+.pay-container{
+  margin-top: 30px;
+}
+.paidByFriend{
+  margin-top: 20px;
+  border: 2px solid rgb(210, 3, 172);
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+}
+.paidByFriendSelected{
+  background-color: rgb(210, 3, 172);
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  margin-top: 20px;
+  border: 2px solid rgb(210, 3, 172);
+}
+.paidByFriend:hover{
+  background-color: rgb(210, 3, 172);
+  color: white;
+  cursor: pointer;
+}
+.modal-heading{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.close-btn{
+  scale: 1.5;
+}
+.close-btn:hover{
+  cursor: pointer;
+  color: red;
+}
+.submit-btn{
+  margin-top: 20px !important;
+  width:100%;
+}
+.submit-btn:hover{
+  background-color: rgb(91, 91, 188) !important;
+  border-radius: 10px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.history-heading{
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tag{
+  color: rgb(133, 114, 4);
+}
+.transaction-search{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.transaction-search>input{
+  padding: 10px;
+  width: 50%;
+  border-radius: 5px;
+}
+.tag-Friend{
+  color: rgb(81, 0, 195);
+}
+.transactions-history{
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-top: 40px; */
+  /* border: 1px solid black; */
+  padding: 20px;
+  /* border-radius: 10px; */
+}
+.transaction-history-values{
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  margin-top: 10px;
+  border: 1px solid rgb(90, 94, 90);
+  padding: 10px;
+  border-radius: 10px;
+}
+.upper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.deleteIcon{
+  margin-top: 13px;
+  margin-left: 20px;
+  scale: 1.2;
+  color: red;
+  cursor: pointer;
+}
+.editIcon{
+  margin-top: 13px;
+  margin-left: 20px;
+  scale: 1.2;
+  color: green;
+  cursor: pointer;
+}
+.addExpense{
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 40px;
+  right: 50px;
+  padding: 10px;
+  cursor: pointer;
+  border: 2px solid rgb(210, 3, 172);;
+  border-radius: 10px;
+}
+.addExpense:hover{
+  border: 2px solid rgb(210, 3, 172);
+  background-color: rgb(210, 3, 172);
+  color: white;
+}
+.addExpense>span{
+  margin-left: 10px;
 }
